# lang-tools

./: Cargo.toml  README.md
src/: clipboard.rs  file.rs  lib.rs  path.rs  proportional.rs  translation.rs  youtube.rs
src/book/: epub.rs  mod.rs
src/subtitle/: clean.rs  ext.rs  extract.rs  mod.rs  path.rs  source.rs  translation.rs  util.rs  write.rs  youtube.rs
tests/: build_subtitle_path.rs  build_subtitle_path_from_path.rs  clean_subtitles.rs  common.rs
tests/files/youtube/: transcript1.xml  transcript2.xml
